--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 @import "tailwindcss";
 
 
 @theme {
-  --font-primary: "Nunito", "serif";
+  --font-primary: "Open Sans", "serif";
   --color-background: linear-gradient(90deg, #540654, #cc0d85 50%, #540654 100%, #00d4ff 0);
+  --color-btn: linear-gradient(90deg, rgb(173, 50, 162), rgb(88, 3, 74));
   
 }
 
 .bg-custom-gradient {
   background: var(--color-background);
+}
+
+.bg-btn {
+  background: var(--color-btn);
 }
